force-app/main/default/objects/CharactClassifMain__c/CharactClassifMain__c.object-meta.xml
<CustomObject>
    <label>Characteristic Classifier (Main)</label>
    <nameField>
        <label>Object</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Characteristic Classifier (Main)</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>