force-app/main/default/objects/CharactClassifMain__c/fields/BusinessDivision__c.field-meta.xml
<CustomField>
    <fullName>BusinessDivision__c</fullName>
    <label>BusinessDivision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BusinessDivisions</valueSetName>
    </valueSet>
</CustomField>