force-app/main/default/objects/CharactClassifMain__c/fields/HasFacet__c.field-meta.xml
<CustomField>
    <fullName>HasFacet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasFacet</label>
    <type>Checkbox</type>
</CustomField>