force-app/main/default/objects/CharactClassifMain__c/fields/HasSRP__c.field-meta.xml
<CustomField>
    <fullName>HasSRP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>HasSRP</label>
    <type>Checkbox</type>
</CustomField>