force-app/main/default/objects/CharactClassifMain__c/fields/ITRef__c.field-meta.xml
<CustomField>
    <fullName>ITRef__c</fullName>
    <label>ITRef</label>
    <length>18</length>
    <type>Text</type>
</CustomField>