force-app/main/default/objects/CharactClassifMain__c/fields/OrderType__c.field-meta.xml
<CustomField>
    <fullName>OrderType__c</fullName>
    <label>OrderType</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>OrderTypes</valueSetName>
    </valueSet>
</CustomField>