force-app/main/default/objects/CharactClassifMain__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>CharactClassifMain__c</referenceTo>
    <relationshipLabel>Characteristic Classifier (Main)</relationshipLabel>
    <relationshipName>Characteristic_Classifier_Main</relationshipName>
    <type>Lookup</type>
</CustomField>